# bevy-compute

./: Cargo.toml  rustfmt.toml
assets/shaders/: game_of_life.wgsl
examples/: life.rs
src/: compute_main_setup.rs  compute_node.rs  lib.rs  parse_render_messages.rs  shader_buffer_set.rs
