[package]
name = "bevy-compute"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_compute"
crate-type = ["lib"]

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
bytemuck = "^1.24"
wgpu = "^26"

[[example]]
name = "life"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
